@@ -1,3 +1,10 @@
+2002-01-11 Ronald Oussoren <oussoren@cistron.nl>
+    * Add workaround for a feature of NSData: 
+    	x = NSData.alloc()
+	y = x.initWithBytes_len_(foo, bar)
+      The initWithBytes_len_ call above acts like realloc(): 'x' might no
+      longer be a pointer to a valid object. 
+
 2002-01-06 Ronald Oussoren <oussoren@cistron.nl>
     * Merged the second halve of Mirko's patch: Changes to Modules/Cocoa
     * I've done some updates to make ensure that there are no patches to
